vlib/v/checker/tests/div_mod_by_cast_zero_int_err.vv
fn main() {
	println(u64(1)/u64(0))
	println(u64(1)%u64(0))

	println(u32(1)/u32(0x0))
	println(u32(1)%u32(0x0))

	println(u16(1)/u16(0b0))
	println(u16(1)%u16(0b0))
}
